; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/tst/extr_cq.c_regi.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/tst/extr_cq.c_regi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @regi() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  %32 = alloca i32, align 4
  %33 = alloca i32, align 4
  %34 = alloca i32, align 4
  %35 = alloca i32, align 4
  %36 = alloca i32, align 4
  %37 = alloca i32, align 4
  %38 = alloca i32, align 4
  %39 = alloca i32, align 4
  %40 = alloca i32, align 4
  %41 = alloca i32, align 4
  %42 = alloca i32, align 4
  %43 = alloca i32, align 4
  %44 = alloca i32, align 4
  %45 = alloca i32, align 4
  %46 = alloca [22 x i32], align 16
  store i32 0, i32* %2, align 4
  store i32 1, i32* %3, align 4
  store i32 2, i32* %4, align 4
  store i32 3, i32* %5, align 4
  store i32 4, i32* %6, align 4
  store i32 5, i32* %7, align 4
  store i32 6, i32* %8, align 4
  store i32 7, i32* %9, align 4
  store i32 8, i32* %10, align 4
  store i32 9, i32* %11, align 4
  store i32 10, i32* %12, align 4
  store i32 11, i32* %13, align 4
  store i32 12, i32* %14, align 4
  store i32 13, i32* %15, align 4
  store i32 14, i32* %16, align 4
  store i32 15, i32* %17, align 4
  store i32 16, i32* %18, align 4
  store i32 17, i32* %19, align 4
  store i32 18, i32* %20, align 4
  store i32 19, i32* %21, align 4
  store i32 20, i32* %22, align 4
  store i32 21, i32* %23, align 4
  store i32 22, i32* %24, align 4
  store i32 23, i32* %25, align 4
  store i32 24, i32* %26, align 4
  store i32 25, i32* %27, align 4
  store i32 26, i32* %28, align 4
  store i32 27, i32* %29, align 4
  store i32 28, i32* %30, align 4
  store i32 29, i32* %31, align 4
  store i32 30, i32* %32, align 4
  store i32 31, i32* %33, align 4
  store i32 32, i32* %34, align 4
  store i32 33, i32* %35, align 4
  store i32 34, i32* %36, align 4
  store i32 35, i32* %37, align 4
  store i32 36, i32* %38, align 4
  store i32 37, i32* %39, align 4
  store i32 38, i32* %40, align 4
  %47 = ptrtoint i32* %3 to i64
  %48 = ptrtoint i32* %2 to i64
  %49 = sub i64 %47, %48
  %50 = sdiv exact i64 %49, 4
  %51 = trunc i64 %50 to i32
  %52 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 0
  store i32 %51, i32* %52, align 16
  %53 = ptrtoint i32* %4 to i64
  %54 = ptrtoint i32* %3 to i64
  %55 = sub i64 %53, %54
  %56 = sdiv exact i64 %55, 4
  %57 = trunc i64 %56 to i32
  %58 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 1
  store i32 %57, i32* %58, align 4
  %59 = ptrtoint i32* %5 to i64
  %60 = ptrtoint i32* %4 to i64
  %61 = sub i64 %59, %60
  %62 = sdiv exact i64 %61, 4
  %63 = trunc i64 %62 to i32
  %64 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 2
  store i32 %63, i32* %64, align 8
  %65 = ptrtoint i32* %7 to i64
  %66 = ptrtoint i32* %5 to i64
  %67 = sub i64 %65, %66
  %68 = sdiv exact i64 %67, 4
  %69 = trunc i64 %68 to i32
  %70 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 3
  store i32 %69, i32* %70, align 4
  %71 = ptrtoint i32* %9 to i64
  %72 = ptrtoint i32* %7 to i64
  %73 = sub i64 %71, %72
  %74 = sdiv exact i64 %73, 4
  %75 = trunc i64 %74 to i32
  %76 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 4
  store i32 %75, i32* %76, align 16
  %77 = ptrtoint i32* %11 to i64
  %78 = ptrtoint i32* %9 to i64
  %79 = sub i64 %77, %78
  %80 = sdiv exact i64 %79, 4
  %81 = trunc i64 %80 to i32
  %82 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 5
  store i32 %81, i32* %82, align 4
  %83 = ptrtoint i32* %13 to i64
  %84 = ptrtoint i32* %11 to i64
  %85 = sub i64 %83, %84
  %86 = sdiv exact i64 %85, 4
  %87 = trunc i64 %86 to i32
  %88 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 6
  store i32 %87, i32* %88, align 8
  %89 = ptrtoint i32* %15 to i64
  %90 = ptrtoint i32* %13 to i64
  %91 = sub i64 %89, %90
  %92 = sdiv exact i64 %91, 4
  %93 = trunc i64 %92 to i32
  %94 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 7
  store i32 %93, i32* %94, align 4
  %95 = ptrtoint i32* %17 to i64
  %96 = ptrtoint i32* %15 to i64
  %97 = sub i64 %95, %96
  %98 = sdiv exact i64 %97, 4
  %99 = trunc i64 %98 to i32
  %100 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 8
  store i32 %99, i32* %100, align 16
  %101 = ptrtoint i32* %19 to i64
  %102 = ptrtoint i32* %17 to i64
  %103 = sub i64 %101, %102
  %104 = sdiv exact i64 %103, 4
  %105 = trunc i64 %104 to i32
  %106 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 9
  store i32 %105, i32* %106, align 4
  %107 = ptrtoint i32* %21 to i64
  %108 = ptrtoint i32* %19 to i64
  %109 = sub i64 %107, %108
  %110 = sdiv exact i64 %109, 4
  %111 = trunc i64 %110 to i32
  %112 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 10
  store i32 %111, i32* %112, align 8
  %113 = ptrtoint i32* %23 to i64
  %114 = ptrtoint i32* %21 to i64
  %115 = sub i64 %113, %114
  %116 = sdiv exact i64 %115, 4
  %117 = trunc i64 %116 to i32
  %118 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 11
  store i32 %117, i32* %118, align 4
  %119 = ptrtoint i32* %25 to i64
  %120 = ptrtoint i32* %23 to i64
  %121 = sub i64 %119, %120
  %122 = sdiv exact i64 %121, 4
  %123 = trunc i64 %122 to i32
  %124 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 12
  store i32 %123, i32* %124, align 16
  %125 = ptrtoint i32* %27 to i64
  %126 = ptrtoint i32* %25 to i64
  %127 = sub i64 %125, %126
  %128 = sdiv exact i64 %127, 4
  %129 = trunc i64 %128 to i32
  %130 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 13
  store i32 %129, i32* %130, align 4
  %131 = ptrtoint i32* %29 to i64
  %132 = ptrtoint i32* %27 to i64
  %133 = sub i64 %131, %132
  %134 = sdiv exact i64 %133, 4
  %135 = trunc i64 %134 to i32
  %136 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 14
  store i32 %135, i32* %136, align 8
  %137 = ptrtoint i32* %31 to i64
  %138 = ptrtoint i32* %29 to i64
  %139 = sub i64 %137, %138
  %140 = sdiv exact i64 %139, 4
  %141 = trunc i64 %140 to i32
  %142 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 15
  store i32 %141, i32* %142, align 4
  %143 = ptrtoint i32* %33 to i64
  %144 = ptrtoint i32* %31 to i64
  %145 = sub i64 %143, %144
  %146 = sdiv exact i64 %145, 4
  %147 = trunc i64 %146 to i32
  %148 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 16
  store i32 %147, i32* %148, align 16
  %149 = ptrtoint i32* %35 to i64
  %150 = ptrtoint i32* %33 to i64
  %151 = sub i64 %149, %150
  %152 = sdiv exact i64 %151, 4
  %153 = trunc i64 %152 to i32
  %154 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 17
  store i32 %153, i32* %154, align 4
  %155 = ptrtoint i32* %37 to i64
  %156 = ptrtoint i32* %35 to i64
  %157 = sub i64 %155, %156
  %158 = sdiv exact i64 %157, 4
  %159 = trunc i64 %158 to i32
  %160 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 18
  store i32 %159, i32* %160, align 8
  %161 = ptrtoint i32* %38 to i64
  %162 = ptrtoint i32* %37 to i64
  %163 = sub i64 %161, %162
  %164 = sdiv exact i64 %163, 4
  %165 = trunc i64 %164 to i32
  %166 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 19
  store i32 %165, i32* %166, align 4
  %167 = ptrtoint i32* %39 to i64
  %168 = ptrtoint i32* %38 to i64
  %169 = sub i64 %167, %168
  %170 = sdiv exact i64 %169, 4
  %171 = trunc i64 %170 to i32
  %172 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 20
  store i32 %171, i32* %172, align 16
  %173 = ptrtoint i32* %40 to i64
  %174 = ptrtoint i32* %39 to i64
  %175 = sub i64 %173, %174
  %176 = sdiv exact i64 %175, 4
  %177 = trunc i64 %176 to i32
  %178 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 21
  store i32 %177, i32* %178, align 4
  %179 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 0
  %180 = load i32, i32* %179, align 16
  store i32 %180, i32* %42, align 4
  store i32 1, i32* %41, align 4
  store i32 0, i32* %45, align 4
  br label %181

181:                                              ; preds = %228, %0
  %182 = load i32, i32* %45, align 4
  %183 = icmp slt i32 %182, 22
  br i1 %183, label %184, label %231

184:                                              ; preds = %181
  %185 = load i32, i32* %41, align 4
  switch i32 %185, label %227 [
    i32 1, label %186
    i32 2, label %199
    i32 3, label %218
  ]

186:                                              ; preds = %184
  %187 = load i32, i32* %45, align 4
  %188 = sext i32 %187 to i64
  %189 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 %188
  %190 = load i32, i32* %189, align 4
  %191 = load i32, i32* %42, align 4
  %192 = icmp ne i32 %190, %191
  br i1 %192, label %193, label %198

193:                                              ; preds = %186
  %194 = load i32, i32* %45, align 4
  %195 = sext i32 %194 to i64
  %196 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 %195
  %197 = load i32, i32* %196, align 4
  store i32 %197, i32* %43, align 4
  store i32 2, i32* %41, align 4
  store i32 1, i32* %44, align 4
  br label %198

198:                                              ; preds = %193, %186
  br label %227

199:                                              ; preds = %184
  %200 = load i32, i32* %45, align 4
  %201 = sext i32 %200 to i64
  %202 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 %201
  %203 = load i32, i32* %202, align 4
  %204 = load i32, i32* %42, align 4
  %205 = icmp eq i32 %203, %204
  br i1 %205, label %206, label %207

206:                                              ; preds = %199
  store i32 3, i32* %41, align 4
  br label %227

207:                                              ; preds = %199
  %208 = load i32, i32* %45, align 4
  %209 = sext i32 %208 to i64
  %210 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 %209
  %211 = load i32, i32* %210, align 4
  %212 = load i32, i32* %43, align 4
  %213 = icmp eq i32 %211, %212
  br i1 %213, label %214, label %217

214:                                              ; preds = %207
  %215 = load i32, i32* %44, align 4
  %216 = add nsw i32 %215, 1
  store i32 %216, i32* %44, align 4
  br label %227

217:                                              ; preds = %207
  store i32 4, i32* %41, align 4
  br label %227

218:                                              ; preds = %184
  %219 = load i32, i32* %45, align 4
  %220 = sext i32 %219 to i64
  %221 = getelementptr inbounds [22 x i32], [22 x i32]* %46, i64 0, i64 %220
  %222 = load i32, i32* %221, align 4
  %223 = load i32, i32* %42, align 4
  %224 = icmp ne i32 %222, %223
  br i1 %224, label %225, label %226

225:                                              ; preds = %218
  store i32 4, i32* %41, align 4
  br label %226

226:                                              ; preds = %225, %218
  br label %227

227:                                              ; preds = %184, %226, %217, %214, %206, %198
  br label %228

228:                                              ; preds = %227
  %229 = load i32, i32* %45, align 4
  %230 = add nsw i32 %229, 1
  store i32 %230, i32* %45, align 4
  br label %181

231:                                              ; preds = %181
  %232 = load i32, i32* %41, align 4
  %233 = icmp eq i32 %232, 3
  br i1 %233, label %234, label %237

234:                                              ; preds = %231
  %235 = load i32, i32* %44, align 4
  %236 = sub nsw i32 16, %235
  store i32 %236, i32* %1, align 4
  br label %238

237:                                              ; preds = %231
  store i32 -1, i32* %1, align 4
  br label %238

238:                                              ; preds = %237, %234
  %239 = load i32, i32* %1, align 4
  ret i32 %239
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
